Fixed spacing

--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -276,7 +276,7 @@ p.intro {
 }
 
 .sectionHeader {
-  padding-left: 40px;
+  padding-left: 54px;
   margin-bottom: -20px;
 }
 
